scripts/nullaway/annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8.txt
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Configurator.java:170: error: [NullAway] dereferenced expression value is @Nullable
					value.toString());
					     ^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:344: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return type;
		^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:385: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:397: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:508: error: [NullAway] dereferenced expression accessible is @Nullable
		return accessible.getAnnotation(Constraint.class);
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:604: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return getParameterizedType(componentType);
		^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Introspector.java:68: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return options.get(optionName);
		^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/examples/OptionListTerminator.java:61: error: [NullAway] dereferenced expression options.arguments is @Nullable
			if ( localArgs[i].equals(options.arguments[i - separatorIndex - 1 ])) {
			                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/examples/ConstraintTest.java:167: error: [NullAway] enhanced-for expression constraintOption.someLetters is @Nullable
		for (char letter: constraintOption.someLetters) {
		                                  ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Configurator.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors
